vitrail-pg-macros/tests/ui/fail/missing_name.stderr
error: expected `name`
 --> tests/ui/fail/missing_name.rs:4:5
  |
4 |     model user {
  |     ^^^^^
